--- a/web-driver-management/assignment/pom.xml
+++ b/web-driver-management/assignment/pom.xml
@@ -84,6 +84,10 @@
 			<version>0.11.4</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.thymeleaf.extras</groupId>
+			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
+		</dependency>
 
 	</dependencies>
 
